# crafting-interpreters

./: .gitignore  README.md  main.py  pyproject.toml
lox/: __init__.py  ast_printer.py  error_reporter.py  expr.py  lox.py  scanner.py  token.py  token_type.py
tool/: generate_ast.py
